--- a/frmMain.resx
+++ b/frmMain.resx
@@ -673,6 +673,9 @@
         ABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFAH//2Q==
 </value>
   </data>
+  <metadata name="ToolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <metadata name="VisualStyler1.VisualStyle" xml:space="preserve">
     <value>OSX (Tiger).vssf</value>
   </metadata>
