--- a/Login.resx
+++ b/Login.resx
@@ -134,8 +134,9 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFhTa2luU29mdC5WaXN1YWxTdHlsZXIsIFZlcnNpb249Mi40LjAu
         MCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0wZmRhOWY0MjNlMWQ5ODMwBQEAAAAzU2tp
         blNvZnQuVmlzdWFsU3R5bGVyLkxpY2Vuc2luZy5WaXN1YWxTdHlsZXJMaWNlbnNlAQAAAAlfc2F2ZWRL
-        ZXkBAgAAAAYDAAAAYFRNbkcxMDZyNi9LYXFEVGF5Wk1vUTQ0SEpKQmhnc2lnNlpxMWFpdUhJcUtQRzgy
-        OC90a0pnMnA3S2ovNUtUczdUKzBibFpEaWtwS2s0aU01UC9kaUZuajJzRHV6STZLZAs=
+        ZXkBAgAAAAYDAAAAbFdQckxVak1vUmpHWUtGb2loY21tcmpVYTlMeTlHbklLKzhmS3FzQ0hld0Q3bGZR
+        S0R6QWkveXNCb3VyMjB2Q2cxdHBZK2FyRGdNRzc1MXNiTzZzQmJXK0V3V3NYZElrcEFjYUljUHlqMGhr
+        PQs=
 </value>
   </data>
   <data name="OSX (Tiger).vssf" mimetype="application/x-microsoft.net.object.binary.base64">
