--- a/frmMain.resx
+++ b/frmMain.resx
@@ -673,9 +673,6 @@
         ABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFAH//2Q==
 </value>
   </data>
-  <metadata name="ToolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
   <metadata name="VisualStyler1.VisualStyle" xml:space="preserve">
     <value>OSX (Tiger).vssf</value>
   </metadata>
@@ -693,8 +690,9 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFhTa2luU29mdC5WaXN1YWxTdHlsZXIsIFZlcnNpb249Mi40LjAu
         MCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0wZmRhOWY0MjNlMWQ5ODMwBQEAAAAzU2tp
         blNvZnQuVmlzdWFsU3R5bGVyLkxpY2Vuc2luZy5WaXN1YWxTdHlsZXJMaWNlbnNlAQAAAAlfc2F2ZWRL
-        ZXkBAgAAAAYDAAAAYFRNbkcxMDZyNi9LYXFEVGF5Wk1vUTQ0SEpKQmhnc2lnNlpxMWFpdUhJcUtQRzgy
-        OC90a0pnMnA3S2ovNUtUczdUKzBibFpEaWtwS2s0aU01UC9kaUZuajJzRHV6STZLZAs=
+        ZXkBAgAAAAYDAAAAbFdQckxVak1vUmpHWUtGb2loY21tcmpVYTlMeTlHbklLKzhmS3FzQ0hld0Q3bGZR
+        S0R6QWkveXNCb3VyMjB2Q2cxdHBZK2FyRGdNRzc1MXNiTzZzQmJXK0V3V3NYZElrcEFjYUljUHlqMGhr
+        PQs=
 </value>
   </data>
   <data name="OSX (Tiger).vssf" mimetype="application/x-microsoft.net.object.binary.base64">
